# LlamApprenticeship

./: RAG_chain (1).ipynb  README.md  docstore.py  parse.ipynb  pyproject.toml  requirements.txt
notebooks/: parse.ipynb
